# gripper-utils

./: README.md  pyproject.toml  test_package.py
src/gripper_utils/: __init__.py  assets.py  backend.py  open3d_utils.py  trimesh_utils.py  viewer.py
src/gripper_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
